# ai_data_science_projects

./: README.md
Face_Recognition_Program/face_recognition_program/: LabProject.m  calcMSE.m  calcPSNR.m  computePSNRs.m  findMinimumErrorPosition.m  makeVector.m  plotIndices.m  readImage.m  unScrambleDatabase.m
apis_data_scraping/apids_proj/: Q1.py  Q2a.py  Q2b.py  Q3a.py  Q3b.py  ex7.py
bayes_nets_probability_trees/bnpt_proj/: student_code.py
data_collection_analysis/dca_proj/: Scatter Plot Correlation Workbook.twb  city_filter_maker.py  data2.json  data2csv2_jjm.csv  data2csv3_jjm.csv  data2csv_jjm.csv  reportdatacsvmaker.py  year_filter_maker.py  ~Scatter Plot Correlation Workbook__15864.twbr
data_parsing_w_json/dpwj_proj/: Q1.py  Q2.py  Q3.py  Q3a.py  Q3c.txt  Q4a.py  Q4b.py  Q4c.py  Q4d.py  Q4d.txt
graph_search_algorithms/gsa_modules/: README.md  a_star_gradingtests.py  (+3 more)
planning_api_pddl/: README.md  domain.pddl  run.py
self_solving_sudoku_puzzle/fp/: CMakeLists.txt  PROPOSAL.md
self_solving_sudoku_puzzle/fp/.cs211/idea/runConfigurations/: build ge211.run.xml  fireworks (ge211 example).run.xml
self_solving_sudoku_puzzle/fp/.cs211/lib/ge211/.run/: Build ge211.run.xml  Build-GE211-Docs.run.xml  Fetch-StdLib-Tags.run.xml  Upload-GE211-Docs.run.xml  fireworks.run.xml
self_solving_sudoku_puzzle/fp/.run/: Model test.run.xml
self_solving_sudoku_puzzle/fp/src/: board.cxx  board.hxx  controller.cxx  controller.hxx  model.cxx  model.hxx  puzzle_space.cxx  puzzle_space.hxx  sudoku.cxx  view.cxx  view.hxx
self_solving_sudoku_puzzle/fp/test/: model_test.cxx
(+27 files in other folders)
